--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API = //localhost:2000
+NEXT_PUBLIC_API = 'http://localhost:2000'
 NEXT_PUBLIC_IMAGE =  'http://localhost:2000/uploads/'
