add login with google

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_API = 'http://localhost:2000'
-NEXT_PUBLIC_IMAGE =  'http://localhost:2000/uploads/'
+NEXT_PUBLIC_IMAGE =  'http://localhost:2000/uploads'
+GOOGLE_CLIENT_ID = 455708357372-t32msec5781sms3ifm0abfolbqb91m2r.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+NEXT_AUTH_URL ='http://localhost:3000'
+JWT_SECRET = c9a405403c8eef71501e52631b67aa63
