--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "next": "12.3.1",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.8.0",
     "react-number-format": "4.9.0",
     "react-toastify": "^9.1.1"
   },
